--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "intro",
+  "homepage": "https://codesurfer8.github.io/ra16-stars/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.1.6"
   }
 }
